Jann 30/objects/CRS_Brand__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Brand_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>CRS_Brand_External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvwCRS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To distinguish if this brand only shows up in glaceau vitaminwater brand list</inlineHelpText>
        <label>gvwCRS</label>
        <type>Checkbox</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brand_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand ID</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE0000000Rxb5MAC_00NE0000002C2T6MAK</fullName>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4)) AND 5</booleanFilter>
        <field>CRS__c.CRS_Brand__c</field>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>CRS submission</value>
        </filterItems>
        <filterItems>
            <field>CRS_Brand__c.gvwCRS__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>glaceau vitaminwater CRS</value>
        </filterItems>
        <filterItems>
            <field>CRS_Brand__c.gvwCRS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CRS_Brand__c.Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>CRS_Brand</name>
        <sourceObject>CRS__c</sourceObject>
    </namedFilters>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>